fix(vsfedfilter): changes based on Gemma's feedback PR#608. Plus moves scrollbar styling to mixin

--- a/src/styles/_placeholders.scss
+++ b/src/styles/_placeholders.scss
@@ -62,3 +62,23 @@ LINK STYLES
 %outline-link-focus-dark {
     outline: $vs-border-width-md solid $vs-color-interaction-focus-on-bold;
 }
+
+/***************
+SCROLL BAR STYLES
+****************/
+
+%vs-scrollbar{
+    &::-webkit-scrollbar {
+        height: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #DEDBE6;
+        border-radius: $vs-radius-tiny;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #535396;
+        border-radius: $vs-radius-tiny;
+    }
+}
